@@ -1,3 +1,11 @@
+2008-11-26  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	Updated the web site generators
+
+	* boards/doubleclick.xml.in:
+	* docs/gcompris2spip.pl:
+	* docs/spip_oneboard.xsl:
+
 2008-11-24  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	* src/boards/shapegame.c: (item_event_drag): Fixed a crash in case of multiple sound list.
